[gd_scene load_steps=19 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Adventurer.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Adventurer.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Backdrop.png" type="Texture" id=4]
[ext_resource path="res://World/Parallax Background 03.png" type="Texture" id=5]
[ext_resource path="res://TransitionScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Parallax Background 01.png" type="Texture" id=7]
[ext_resource path="res://World/Parallax Background 02.png" type="Texture" id=8]
[ext_resource path="res://CloudLayer.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 7 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 320, 0 )
script = ExtResource( 9 )
CLOUD_SPEED = -5.0

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 8 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 5 )
centered = false

[node name="Backdrop" type="Sprite" parent="."]
position = Vector2( 153, 37 )
scale = Vector2( 4.8, 2.125 )
texture = ExtResource( 4 )

[node name="Title" type="Label" parent="."]
margin_left = 88.0
margin_top = 14.0
margin_right = 244.0
margin_bottom = 46.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Smaglantis"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -77.0
margin_right = 73.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 65.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../QuitButton")
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Start"
flat = true
align = 0

[node name="OptionButton" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 65.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
text = "Options"
flat = true
align = 0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 65.0
margin_bottom = 74.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
text = "Quit"
flat = true
align = 0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TransitionScreen" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
